--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -32,7 +32,6 @@
   justify-content: flex-end;
   align-items: center;
 }
-
 .gpt__navbar-links_container p,
 .gpt__navbar-sign p,
 .gpt__navbar-menu_container p {
@@ -44,5 +43,19 @@
   text-transform: capitalize;
 
   margin: 0 1rem;
+  cursor: pointer;
+}
+.gpt__navbar-sign button,
+.gpt__navbar-menu_container button {
+  padding: 1rem 1rem;
+  color: #fff;
+  background: #ff4820;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 5px;
+  border: 0;
+  outline: none;
   cursor: pointer;
 }
