--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,11 @@ body {
   background: var(--color-bg);
 }
 
+a {
+  color: unset;
+  text-decoration: none;
+}
 .gradient__bg {
-  /* ff 3.6+ */
   background: -moz-radial-gradient(
     circle at 3% 25%,
     rgba(0, 40, 83, 1) 0%,
@@ -46,7 +49,7 @@ body {
   );
 }
 
-.gradient__bg {
+.gradient__text {
   background: var(--gradient-text);
   background-clip: text;
   -webkit-background-clip: text;
@@ -57,8 +60,8 @@ body {
   padding: 4rem 6rem;
 }
 
-.section__padding {
-  padding: 4rem 6rem;
+.section__margin {
+  margin: 4rem 6rem;
 }
 .scale-up-center {
   -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
@@ -92,7 +95,7 @@ body {
     padding: 4rem;
   }
 
-  .section__padding {
+  .section__margin {
     margin: 4rem;
   }
 }
@@ -102,7 +105,7 @@ body {
     padding: 4rem 2rem;
   }
 
-  .section__padding {
+  .section__margin {
     margin: 4rem 2rem;
   }
 }
